--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
     <img src="./imagenes/flechaContraer.png" alt="">
   </a>
 
+  <!-- <div class="transferencia">
+    <div class="rojo"></div>
+    <div class="naranja"></div>
+    <div class="amarillo"></div>
+    <div class="verdeClaro"></div>
+    <div class="verdeOscuro"></div>
+  </div> -->
+
   <div class="destacado">
     <h3 class="destacadoTitle title">Lo más destacado</h3>
   </div>
