--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="nav-link" id="cambios" href="#">La liga</a>
           <a class="nav-link" id="cambios" href="#">Ligue one</a>
           <a class="nav-link" id="cambios" href="#">Serie A</a>
-          <a class="nav-link" id="cambios" href="#">Liga Argentina</a>
+          <a class="nav-link" id="cambios" href="#">Champions League</a>
         </div>
         <div class="heiContainer">
           <a id="cambios" href="https://www.heineken.com"><img class="heini" src="./imagenes/heineken.png" alt=""></a>
@@ -44,21 +44,14 @@
     <img src="./imagenes/flechaContraer.png" alt="">
   </a>
 
-  <!-- <div class="transferencia">
-    <div class="rojo"></div>
-    <div class="naranja"></div>
-    <div class="amarillo"></div>
-    <div class="verdeClaro"></div>
-    <div class="verdeOscuro"></div>
-  </div> -->
 
   <div class="destacado">
     <h3 class="destacadoTitle title">Lo más destacado</h3>
   </div>
   <div class="portadaContainer">
     <div class="imagenesContainer">
-      <div class="marcoFoto">
-        <a href="#reciente"><img class="imagenDestacado zoom psg" src="./imagenes/messi.jpg" alt="" /></a>
+      <div class="messiCont">
+        <a href="#reciente"><img class="" src="./imagenes/messi.jpg" alt="" /></a>
       </div>
       <div class="duoContainer">
         <h3>Ultimas noticias</h3>
@@ -76,7 +69,7 @@
             <a href="#atleti"><img class="imagenDestacado zoom" src="./imagenes/atletico.jpg" alt="" /></a>
           </div>
           <div class="marcoFoto">
-            <a href="#boca"><img class="imagenDestacado zoom" src="./imagenes/boca.jpg" alt="" /></a>
+            <a href="#boca"><img class="imagenDestacado zoom" src="./imagenes/real.png" alt="" /></a>
           </div>
         </div>
         <div class="tellerInicio">
@@ -89,6 +82,17 @@
       </div>
     </div>
   </div>
+
+
+  <!-- <div class="transferencia">
+    <div class="rojo"></div>
+    <div class="naranja"></div>
+    <div class="amarillo"></div>
+    <div class="verdeClaro"></div>
+    <div class="verdeOscuro"></div>
+  </div>  -->
+
+
 <div class="gContainer">
   <article id="reciente" class="recienteContainer">
     <h2 class="titulos reciente">Mas reciente</h2>
@@ -175,7 +179,7 @@
   <article id="boca" class="recienteContainer">
     <h2 class="titulos">Fue ilegal lo del changuito?</h2>
     <div class="contenedorArticulo">
-      <img class="imagenArticulo" src="./imagenes/boca.jpg" alt="" />
+      <img class="imagenArticulo" src="./imagenes/real.png" alt="" />
       <div class="infoContainer">
         <p class="pContainer">
           <b class="letraGrande">L</b>a justicia esta investigando a Milton
