--- a/premier.html
+++ b/premier.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-light" id="backgroundNav">
     <div class="container-fluid" id="inicio">
-      <a class="navbar-brand" id="logo" href="#"><img id="logoImg" src="./imagenes/logo.png" alt="" /></a>
+      <a class="navbar-brand" id="logo" href="index.html"><img id="logoImg" src="./imagenes/logo.png" alt="" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <img src="https://img.icons8.com/ios-glyphs/30/FFFFFF/menu--v1.jpg" />
@@ -30,7 +30,7 @@
           <a class="nav-link" id="cambios" href="#">La liga</a>
           <a class="nav-link" id="cambios" href="#">Ligue one</a>
           <a class="nav-link" id="cambios" href="#">Serie A</a>
-          <a class="nav-link" id="cambios" href="#">Champions League</a>
+          <a class="nav-link" id="cambios" href="predicciones.html">Transpasos</a>
         </div>
         <div class="heiContainer">
           <a id="cambios" href="https://www.heineken.com"><img class="heini" src="./imagenes/heineken.png" alt=""></a>
