--- a/premier.html
+++ b/premier.html
@@ -30,7 +30,7 @@
           <a class="nav-link" id="cambios" href="#">La liga</a>
           <a class="nav-link" id="cambios" href="#">Ligue one</a>
           <a class="nav-link" id="cambios" href="#">Serie A</a>
-          <a class="nav-link" id="cambios" href="predicciones.html">Transpasos</a>
+          <a class="nav-link" id="cambios" href="predicciones.html">Fichajes</a>
         </div>
         <div class="heiContainer">
           <a id="cambios" href="https://www.heineken.com"><img class="heini" src="./imagenes/heineken.png" alt=""></a>
