--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a class="nav-link" id="cambios" href="#">La liga</a>
           <a class="nav-link" id="cambios" href="#">Ligue one</a>
           <a class="nav-link" id="cambios" href="#">Serie A</a>
-          <a class="nav-link" id="cambios" href="predicciones.html">Transpasos</a>
+          <a class="nav-link" id="cambios" href="predicciones.html">Fichajes</a>
         </div>
         <div class="heiContainer">
           <a id="cambios" href="https://www.heineken.com"><img class="heini" src="./imagenes/heineken.png" alt=""></a>
@@ -90,15 +90,6 @@
       </div>
     </div>
   </div>
-
-
-  <!-- <div class="transferencia">
-    <div class="rojo"></div>
-    <div class="naranja"></div>
-    <div class="amarillo"></div>
-    <div class="verdeClaro"></div>
-    <div class="verdeOscuro"></div>
-  </div>  -->
 
 
 <div class="gContainer">
