--- a/predicciones.html
+++ b/predicciones.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
-  <title>Golazo | Transpasos</title>
+  <title>Golazo | Fichajes</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
           <a class="nav-link" id="cambios" href="#">La liga</a>
           <a class="nav-link" id="cambios" href="#">Ligue one</a>
           <a class="nav-link" id="cambios" href="#">Serie A</a>
-          <a class="nav-link" id="cambios" href="predicciones.html">Transpasos</a>
+          <a class="nav-link" id="cambios" href="predicciones.html">Fichajes</a>
         </div>
         <div class="heiContainer">
           <a id="cambios" href="https://www.heineken.com"><img class="heini" src="./imagenes/heineken.png" alt=""></a>
@@ -39,9 +39,32 @@
       </div>
     </div>
   </nav>
+    <section class="transpasosInicio">
+      <div class="contenedorTxt">
+        <h3>Intenta predecir los fichajes</h3>
+        <p>Vos junto a la comunidad podés interactuar y dar tu opinion acerca de que fichaje se va a completar,
+           elegí entre cuan probable crees que sea ese fichaje y con nuestra base de datos vamos a determinar que porcentaje
+          de la comunidad se asemeja a tu predicción.</p>
+      </div>
+    </section>
 
     <section>
-        <h3></h3>
+      <div class="duoFichajes">
+        <div class="tarjetaFichajes">
+          <img class="imagenFichaje" src="" alt="">
+          <p class="nombreFichaje"></p>
+
+          <div class="transferencia">
+            <div class="rojo"></div>
+            <div class="naranja"></div>
+            <div class="amarillo"></div>
+            <div class="verdeClaro"></div>
+            <div class="verdeOscuro"></div>
+          </div>  
+        </div>
+        
+        <div class="tarjetaFichajes"></div>
+      </div>
     </section>
 
   <footer>
