--- a/predicciones.html
+++ b/predicciones.html
@@ -50,11 +50,14 @@
 
     <section>
       <div class="duoFichajes">
-        <div class="tarjetaFichajes">
-          <img class="imagenFichaje" src="" alt="">
-          <p class="nombreFichaje"></p>
 
-          <div class="transferencia">
+
+
+        <div class="tarjetaFichajes">
+          <div class="arribaTarjeta">
+          <p class="nombreFichaje">Gabriel Jesus</p>
+
+        <div class="transferencia">
             <div class="rojo"></div>
             <div class="naranja"></div>
             <div class="amarillo"></div>
@@ -62,8 +65,9 @@
             <div class="verdeOscuro"></div>
           </div>  
         </div>
+        </div>
         
-        <div class="tarjetaFichajes"></div>
+
       </div>
     </section>
 
