--- a/premier.html
+++ b/premier.html
@@ -45,13 +45,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./imagenes/city.jpg" class="d-block w-100" alt="Manchester City">
+          <img src="./imagenes/city.jpg" class="d-block w-100 slideImg" alt="Manchester City">
         </div>
         <div class="carousel-item">
-          <img src="./imagenes/licha.png" class="d-block w-100" alt="Lisandro Martinez">
+          <img src="./imagenes/licha.png" class="d-block w-100 slideImg" alt="Lisandro Martinez">
         </div>
         <div class="carousel-item">
-          <img src="./imagenes/arsenal.png" class="d-block w-100" alt="Arsenal">
+          <img src="./imagenes/pelea.png" class="d-block w-100 slideImg" alt="Pelea Chelsea Inter">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
