--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
       <a target="_blank" href="https://www.tiktok.com"><img class="icon" src="./imagenes/tik-tok.png" alt=""></a>
     </div>
     <div class="quienes">
-      <p class="footerP">Manuel Todorov: <b>Desarrollo web</b></p>
-      <p class="footerP">Nahuel Genovesi: <b>Diseño y edición de imagenes</b></p>
-      <p class="footerP">Ian simoes: <b>Apoyo moral</b></p>
+      <p class="footerP"><b>Manuel Todorov:</b> Desarrollo web</p>
+      <p class="footerP"><b>Nahuel Genovesi:</b> Diseño y edición de imagenes</p>
+      <p class="footerP"><b>Ian simoes:</b> Apoyo moral</p>
     </div>
   </footer>
 
