--- a/index.html
+++ b/index.html
@@ -24,34 +24,12 @@
     </div>
   </div>
 
-  <nav class="navbar navbar-expand-lg bg-light" id="backgroundNav">
-    <div class="container-fluid" id="inicio">
-      <a class="navbar-brand" id="logo" href="#"><img id="logoImg" src="./imagenes/logo.png" alt="" /></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <img src="https://img.icons8.com/ios-glyphs/30/FFFFFF/menu--v1.jpg" />
-      </button>
-      <div class="navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" id="cambios" aria-current="page" href="#">Inicio</a>
-          <a class="nav-link" id="cambios" href="premier.html">Premier League</a>
-          <a class="nav-link" id="cambios" href="#">La liga</a>
-          <a class="nav-link" id="cambios" href="#">Ligue one</a>
-          <a class="nav-link" id="cambios" href="#">Serie A</a>
-          <a class="nav-link" id="cambios" href="predicciones.html">Fichajes</a>
-        </div>
-        <div class="heiContainer">
-          <a id="cambios" href="https://www.heineken.com"><img class="heini" src="./imagenes/heineken.png" alt=""></a>
-          <a id="cambios" href="https://www.adidas.com"><img class="adidas" src="./imagenes/adidas.png" alt=""></a>
-        </div>
-      </div>
-    </div>
-  </nav>
-
   <a href="#inicio" class="arriba">
     <img src="./imagenes/flechaContraer.png" alt="">
   </a>
 
+  <nav class="navbar navbar-expand-lg bg-light" id="backgroundNav"></nav>
+  
 
   <div class="destacado">
     <h3 class="destacadoTitle title">Lo más destacado</h3>
@@ -66,7 +44,7 @@
         <div class="lineaPortada"></div>
         <div class="duoImagenes">
           <div class="marcoFoto">
-            <a href="#juve"><img class="imagenDestacado zoom" src="./imagenes/juve.jpg" alt="" /></a>
+            <a href="#juve"><img class="imagenDestacado zoom" src="./imagenes/real.png" alt="" /></a>
           </div>
           <div class="marcoFoto">
             <a href="#city"><img class="imagenDestacado zoom" src="./imagenes/city.jpg" alt="" /></a>
@@ -77,7 +55,7 @@
             <a href="#atleti"><img class="imagenDestacado zoom" src="./imagenes/atletico.jpg" alt="" /></a>
           </div>
           <div class="marcoFoto">
-            <a href="#boca"><img class="imagenDestacado zoom" src="./imagenes/real.png" alt="" /></a>
+            <a href="#boca"><img class="imagenDestacado zoom" src="./imagenes/cucu1.png" alt="" /></a>
           </div>
         </div>
         <div class="tellerInicio">
@@ -154,9 +132,9 @@
   </article>
 
   <article id="juve" class="recienteContainer">
-    <h2 class="titulos">Que debut fideo!!</h2>
+    <h2 class="titulos">El lateral mas caro de la historia</h2>
     <div class="contenedorArticulo">
-      <img class="imagenArticulo" src="imagenes/juve.jpg" alt="" />
+      <img class="imagenArticulo" src="imagenes/cucu1.png" alt="" />
       <div class="infoContainer">
         <p class="pContainer">
           <b class="letraGrande">E</b>l conjunto Bianconeri se destaco este finde semana por la contundente victoria
@@ -176,7 +154,7 @@
   </article>
 
   <article id="boca" class="recienteContainer">
-    <h2 class="titulos">Fue ilegal lo del changuito?</h2>
+    <h2 class="titulos">Gran noche del real en champions</h2>
     <div class="contenedorArticulo">
       <img class="imagenArticulo" src="./imagenes/real.png" alt="" />
       <div class="infoContainer">
@@ -197,25 +175,7 @@
   </article>
 </div>
 
-  <footer>
-    <div class="teller">
-      <p class="title">Suscribite a nuestro Newsteller</p>
-      <form action="">
-        <input placeholder="leomessi@gmail.com" type="email">
-        <button type="submit">Suscribirme</button>
-      </form>
-    </div>
-    <div class="redes">
-      <a target="_blank" href="https://www.instragram.com"><img class="icon" src="./imagenes/instagram(1).png" alt=""></a>
-      <a target="_blank" href="https://www.twitter.com"><img class="icon" src="./imagenes/gorjeo.png" alt=""></a>
-      <a target="_blank" href="https://www.tiktok.com"><img class="icon" src="./imagenes/tik-tok.png" alt=""></a>
-    </div>
-    <div class="quienes">
-      <p class="footerP"><b>Manuel Todorov:</b> Desarrollo web</p>
-      <p class="footerP"><b>Nahuel Genovesi:</b> Diseño y edición de imagenes</p>
-      <p class="footerP"><b>Ian simoes:</b> Apoyo moral</p>
-    </div>
-  </footer>
+  <footer id="footer"></footer>
 
   <script>
 
@@ -227,6 +187,8 @@
       }, 1500)
 
   </script>
+  <script src="./elementos/navBar.js"></script>
+  <script src="./elementos/footer.js"></script>
 </body>
 
 </html>
