--- a/predicciones.html
+++ b/predicciones.html
@@ -16,29 +16,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-light" id="backgroundNav">
-    <div class="container-fluid" id="inicio">
-      <a class="navbar-brand" id="logo" href="index.html"><img id="logoImg" src="./imagenes/logo.png" alt="" /></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <img src="https://img.icons8.com/ios-glyphs/30/FFFFFF/menu--v1.jpg" />
-      </button>
-      <div class="navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" id="cambios" aria-current="page" href="index.html">Inicio</a>
-          <a class="nav-link" id="cambios" href="premier.html">Premier League</a>
-          <a class="nav-link" id="cambios" href="#">La liga</a>
-          <a class="nav-link" id="cambios" href="#">Ligue one</a>
-          <a class="nav-link" id="cambios" href="#">Serie A</a>
-          <a class="nav-link" id="cambios" href="predicciones.html">Fichajes</a>
-        </div>
-        <div class="heiContainer">
-          <a id="cambios" href="https://www.heineken.com"><img class="heini" src="./imagenes/heineken.png" alt=""></a>
-          <a id="cambios" href="https://www.adidas.com"><img class="adidas" src="./imagenes/adidas.png" alt=""></a>
-        </div>
-      </div>
-    </div>
-  </nav>
+  <nav class="navbar navbar-expand-lg bg-light" id="backgroundNav"></nav>
     <section class="transpasosInicio">
       <div class="contenedorTxt">
         <h3>Intenta predecir los fichajes</h3>
@@ -51,18 +29,16 @@
     <section>
       <div class="duoFichajes">
 
-
-
         <div class="tarjetaFichajes">
           <div class="arribaTarjeta">
           <p class="nombreFichaje">Gabriel Jesus</p>
 
         <div class="transferencia">
-            <div class="rojo"></div>
-            <div class="naranja"></div>
-            <div class="amarillo"></div>
-            <div class="verdeClaro"></div>
-            <div class="verdeOscuro"></div>
+            <div class="rojo fSelec"></div>
+            <div class="naranja fSelec"></div>
+            <div class="amarillo fSelec"></div>
+            <div class="verdeClaro fSelec"></div>
+            <div class="verdeOscuro fSelec"></div>
           </div>  
         </div>
         </div>
@@ -71,26 +47,10 @@
       </div>
     </section>
 
-  <footer>
-    <div class="teller">
-      <p class="title">Suscribite a nuestro Newsteller</p>
-      <form action="">
-        <input placeholder="leomessi@gmail.com" type="email">
-        <button type="submit">Suscribirme</button>
-      </form>
-    </div>
-    <div class="redes">
-      <a target="_blank" href="https://www.instragram.com"><img class="icon" src="./imagenes/instagram(1).png" alt=""></a>
-      <a target="_blank" href="https://www.twitter.com"><img class="icon" src="./imagenes/gorjeo.png" alt=""></a>
-      <a target="_blank" href="https://www.tiktok.com"><img class="icon" src="./imagenes/tik-tok.png" alt=""></a>
-    </div>
-    <div class="quienes">
-      <p class="footerP">Manuel Todorov: <b>Desarrollo web</b></p>
-      <p class="footerP">Nahuel Genovesi: <b>Diseño y edición de imagenes</b></p>
-      <p class="footerP">Ian simoes: <b>Apoyo moral</b></p>
-    </div>
-  </footer>
+  <footer id="footer"></footer>
 
+  <script src="./elementos/navBar.js"></script>
+  <script src="./elementos/footer.js"></script>
 </body>
 
 </html>
