--- a/predicciones.html
+++ b/predicciones.html
@@ -27,11 +27,29 @@
     </section>
 
     <section>
+      <marquee >
+        <pre>Gabriel Jesus => Arsenal          Jose bonifacio => Newcastle          Rahim Sterling => Chelsea          Kylian Mbappe => Real Madrid          Romelu Lukaku => Boca Juniors          Gonzalo Higuain => Riber Plate          Esteban Rolon => Bayern Munich</pre>
+      </marquee>
       <div class="duoFichajes">
 
-        <div class="tarjetaFichajes">
+        <div id="gabriel" class="tarjetaFichajes">
           <div class="arribaTarjeta">
           <p class="nombreFichaje">Gabriel Jesus</p>
+
+        <div class="transferencia">
+            <div class="rojo fSelec"></div>
+            <div class="naranja fSelec"></div>
+            <div class="amarillo fSelec"></div>
+            <div class="verdeClaro fSelec"></div>
+            <div class="verdeOscuro fSelec"></div>
+          </div>  
+        </div>
+        </div>
+
+
+        <div id="jose" class="tarjetaFichajes">
+          <div class="arribaTarjeta">
+          <p class="nombreFichaje">Jose bonifacio</p>
 
         <div class="transferencia">
             <div class="rojo fSelec"></div>
