--- a/predicciones.html
+++ b/predicciones.html
@@ -27,7 +27,7 @@
     </section>
 
     <section>
-      <marquee >
+      <marquee scrollamount="20">
         <pre>Gabriel Jesus => Arsenal          Jose bonifacio => Newcastle          Rahim Sterling => Chelsea          Kylian Mbappe => Real Madrid          Romelu Lukaku => Boca Juniors          Gonzalo Higuain => Riber Plate          Esteban Rolon => Bayern Munich</pre>
       </marquee>
       <div class="duoFichajes">
