--- a/premier.html
+++ b/premier.html
@@ -32,19 +32,18 @@
           <img src="./imagenes/pelea.png" class="d-block w-100 slideImg" alt="Pelea Chelsea Inter">
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <button class="carousel-control-prev carouselBtn" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden" id="prev">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <button class="carousel-control-next carouselBtn" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden" id="next">Next</span>
       </button>
     </div>
+    
+    <button class="verTabla">Ver Tabla</button>
 
-    <div class="tablaSlide">
-      <img src="./imagenes/tabla.png" alt="">
-    </div>
 </div>
 
 <a href="#inicio" class="arriba">
